# vi-ocr-bench

./: .gitignore  README.md  benchmark.py  evaluate.py  pyproject.toml
model_scripts/: chandra_ocr_2.py  deepseek_ocr_2.py  deepseek_ocr_2_transformers.py  dots_mocr.py  dots_mocr_transformers.py  hunyuan_ocr.py  hunyuan_ocr_transformers.py  nanonets_ocr2.py  paddleocr_v5.py  paddleocr_vl.py  template.py  vintern_1b_v3_5.py  vintern_1b_v3_5_transformers.py
scripts/: download_model.sh  install_vllm.sh  vllm_serving.sh
vi_metrics/: __init__.py  __main__.py  cli.py  core.py  io.py
